# rust-server-boilerplate

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
src/: lib.rs  lib_test.rs  main.rs
src/handlers/: health.rs  health_test.rs  mod.rs
src/router/: mod.rs  routes.rs  routes_test.rs
src/tests/: health_check.rs  mod.rs  router_test.rs
