[package]
name = "rust-server-boilerplate"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["full"] }
dotenv = "0.15"

[dev-dependencies]
tower-test = "0.4"
tokio-test = "0.4"
